[package]
name = "proj"
version = "0.1.0"
authors = ["Aryan Regmi <aryan.regmi98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotly = { version = "0.6.0", features = ["kaleido"] }

[dev-dependencies]
speculate = "0.1"
